# arcbox-desktop

./: .gitignore  .pre-commit-config.yaml  .swift-format  .swiftlint.yml  AGENTS.md  CHANGELOG.md  LICENSE-APACHE  Local.xcconfig.example  Makefile  PLAN.helper.md  PLAN.md  README.md  Version.xcconfig  arcbox.version  devenv.nix  prek.toml  project.yml  release-please-config.json
.cargo/: config.toml
ArcBox/: Analytics.swift  ArcBox.entitlements  ArcBoxApp.swift  DaemonEntitlements.entitlements  ErrorReporting.swift  Info.plist  Logging.swift  PerformanceTracing.swift
ArcBox.xcodeproj/: project.pbxproj
ArcBoxHelper/: ArcBoxHelperInfo.plist  HelperOperations.swift  HelperProtocol.swift  Logging.swift  main.swift
ArcBoxHelperCtl/: main.swift
ArcBoxTests/: ArcBoxClientErrorTests.swift  ChangelogParserTests.swift  ContainersViewModelTests.swift  DockerEventMonitorTests.swift  FleetEnrollmentCoordinatorTests.swift  FleetViewModelTests.swift  GuestDataMountTests.swift  ImagesViewModelTests.swift  K8sModelsTests.swift  MachineModelTests.swift  RunnersViewModelTests.swift
LaunchDaemons/: com.arcboxlabs.desktop.daemon.plist  com.arcboxlabs.desktop.helper.plist  io.arcbox.desktop.helper.plist
arcbox-desktop-swift.xcodeproj/: project.pbxproj
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
xtask/src/commands/: macos.rs  mod.rs  protocol.rs  release.rs
xtask/src/commands/macos/: bundle.rs  dmg.rs  embed.rs
xtask/src/commands/macos/dmg/: tests.rs
xtask/src/commands/release/: appcast.rs  latest_json.rs  resolve.rs
xtask/src/support/: fs.rs  mod.rs
(+280 files in other folders)
