[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
plist = "1.8"
regex = "1"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
walkdir = "2"
xshell = "0.2"
xtask-kit = { version = "0.1.3", package = "xtask", features = [
    "apple",
    "dmg",
    "latest-json",
    "github-actions",
    "process",
] }

# Standalone workspace: this dev tool stays out of any parent build graph and
# deliberately keeps no Cargo.toml/Cargo.lock at the (Swift) repo root. Invoked
# via the `cargo xtask` alias in ../.cargo/config.toml.
[workspace]
resolver = "2"
